2002-06-13  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc, audio/xmidi.cc : Getting around some problems with (our)
	  snprintf not supporting floating point types. 

2002-06-09  Ryan Nunn  <triforce@merlin.net.au>
	* gumps/Paperdoll_gump.cc : Fixing up cosmetic problem with belt slot
	  items lacking paperdoll art.

2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* autogen.sh: always include /usr/local/share/aclocal if it exists

2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/Makefile.am: add estudio/new files to dist/data
	* exult.spec.in: add estudio/new files to studio rpm

2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* */Makefile.am: cleaning up distro stuff
	* exult.spec.in: fixed
	* usecode/ucxt/head2data.cc: removed utils.cc dependency

2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: typo

2002-06-06  Ryan Nunn  <triforce@merlin.net.au>
	* browser.cc, gamerend.cc, gumps/gump_utils.cc : Fixing problems
	  introduced by Kirben when getting Exult Exult to compile with GCC3.1
	  in Windows.
	* actorio.cc, objs/objiter.cc, msvcstuff/Exult.dsp : Some last minute
	  changes for MSVC. Not required, but I though it would be a good idea
	  since the CVS Tag is being moved to include Kirbens changes

2002-06-05  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc : Removed the allow any item in back slot code.
	* gumps/Paperdoll_gump.cc : Fixed bug where items were in wrong places.
	* gumps/Paperdoll_gump_info.cc : Allow bags, barrels, boxes, crates,
	  chests and baskets to be placed in the back slot in BG.
	* cheat.cc : Fixing a few a warning, and adding missing header include
	* exult.cc, server/servemsg.cc : Getting win32 versions to build
	  without #define USE_EXULTSTUDIO
	* Makefile.win32, Makefile.cygwin, win32/*.*, msvcstuff/*.* : Updating
	  Win32 version numbers.
	* Makefile.am, audio/midi_drivers/Makefile.am, server/Makefile.am :